--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,13 @@
         - POSTGRES_USER=postgres
         - POSTGRES_PASSWORD=postgres
     web:
-      build: .
-      command: python manage.py runserver 0.0.0.0:8000
+      build:
+        context: .
+        dockerfile: Dockerfile
+      command: python manage.py runserver 0.0.0.0:8080
       volumes:
         - .:/code
       ports:
-        - "8000:8000"
+        - "8080:8080"
       depends_on:
         - db
