--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# asgiref==3.2.7
+asgiref==3.2.7
 Django==3.0.5
 django-cors-headers==3.2.1
 django-debug-toolbar==2.2
@@ -6,7 +6,8 @@ django-dotenv==1.4.2
 djangorestframework==3.11.0
 gunicorn==20.0.4
 Pillow==7.1.2
-# psycopg2-binary==2.8.5
+psycopg2-binary==2.8.5
 pytz==2020.1
 sqlparse==0.3.1
 whitenoise==5.0.1
+git+https://github.com/django-compressor/django-compressor.git
