--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 SECRET_KEY=*v&^73dhjlra_82g&mk5h2$6_4woljutk1b2y%s^=tz9@3cgw9
 
-DB_NAME=postgres
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_HOST=0.0.0.0
+DB_NAME=my-tunes-db
+DB_USER=squeaky
+DB_PASSWORD=Hecaresforme#07
+DB_HOST=srv-captain--my-tunes-db
 DB_PORT=5432
