--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 asgiref==3.2.7
-Django==3.0.5
+django>=3.0.14
 django-cors-headers==3.2.1
 django-debug-toolbar>=2.2.1
 django-dotenv==1.4.2
-djangorestframework==3.11.0
+djangorestframework>=3.11.2
 gunicorn==20.0.4
-Pillow==7.1.2
+Pillow>=8.1.1
 psycopg2-binary==2.8.5
 pytz==2020.1
 sqlparse==0.3.1
